--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
                 </div>
                 <p><span id="currentStatus">Waking up...</span></p>
                 <p>This may take a while... sit back, get a cup of tea or something.</p>
-                <p><i>Why does it take so long?</i> Depending on how long Google's been tracking your location, you may have hundreds of thousands of [latitude, longitude] pairs, every one of which must be loaded, analyzed, and plotted. That's a lot of dots.</p>
+                <p><i>Why does it take so long?
+                </i> Depending on how long Google's been tracking your location, you may have hundreds of thousands of [latitude, longitude] pairs, every one of which must be loaded, analyzed, and plotted. That's a lot of dots.</p>
             </div>
 
             <!-- Content displayed once processing complete -->
             <div id="done" class="content-box hidden">
                 <h2>Render complete!</h2>
                 <p>Successfully processed <span id="numberProcessed">a lot of</span> data points to generate your heatmap. Please submit your email address to start exploring...</p>
-                <div class="email-form">
-                    <input id="email" type="email" placeholder="Email address" />
                     <button id="launch">Launch heatmap</button>
                 </div>
                 <p>Usage tips: <i>Zoom</i> by scrolling, double-clicking, or using the buttons in the upper lefthand corner. <i>Navigate</i> by clicking and dragging. Hover over the menu in the lower lefthand corner to customize the heatmap rendering.</p>
